# kilimo-kisasa

./: .gitignore
kisasa-backend/: .dockerignore  .env.example  .gitignore  COMMAND_REFERENCE.md  Dockerfile  MIGRATIONS_GUIDE.md  NEON_SETUP.md  QUICKSTART.md  README.md  docker-compose.yml  manage_migrations.py  pyproject.toml  requirements.txt  seed_admin.py  seed_demo.py
kisasa-backend/app/: config.py  database.py  db_types.py  firebase_service.py  main.py
kisasa-backend/app/api/v1/: __init__.py  agrovets.py  auth.py  comments.py  expert_applications.py  issues.py  products.py  (+3 more)
kisasa-backend/app/jack_assistant/: __init__.py  knowledge_base.py  router.py  schemas.py  service.py
kisasa-backend/app/models/: __init__.py  agrovet.py  comment.py  endorsement.py  expert_application.py  issue.py  issue_vote.py  product.py  recommendation.py  uploaded_image.py  user.py
kisasa-backend/app/schemas/: __init__.py  agrovet_schema.py  auth_schema.py  comment_schema.py  expert_application_schema.py  issue_schema.py  nearby_schema.py  product_schema.py  recommendation_schema.py  upload_schema.py  user_schema.py
kisasa-backend/app/services/: auth_service.py
kisasa-backend/app/tests/: test_api.py
kisasa-backend/app/utils/: __init__.py  dependencies.py  exceptions.py
kisasa-backend/migrations/: alembic.ini  env.py  script.py.mako
kisasa-backend/migrations/versions/: 001_initial_schema.py  002_uploaded_images.py  003_issue_post_type.py  004_expert_applications.py  005_agrovet_owner_catalogue.py  006_issue_votes.py  007_user_password_hash.py  008_nested_comments.py
(+9 files in other folders)
