[project]
name = "kisasa-backend"
version = "1.0.0"
description = "Kilimo Kisasa - Agricultural Social Media Platform Backend"
authors = [
    {name = "Kilimo Kisasa Team", email = "team@kisamoapp.com"}
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint]
max-line-length = 88
